# rag_basic_hp

./: 1일차.ipynb  2일차2.ipynb  main.py  pyproject.toml  김민수 강사님.txt  사용한_cli명령.md  수행평가 제출양식_김경하.docx  최종과제.ipynb
