[project]
name = "rag-hp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.14.2",
    "ipykernel>=7.2.0",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langfuse>=4.7.1",
    "numpy>=2.2.6",
    "pypdf>=6.13.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.13.0",
]
